--- a/src/components/alunos/infoAluno.html
+++ b/src/components/alunos/infoAluno.html
@@ -6,26 +6,26 @@
 
     </div>
  <form id='form_info_aluno'>
-<fieldset class='fieldset_info' id='filedset_info_cadastro'>
-    <div class='div_input'>
+<div class='fieldset' id='filedset_info_cadastro'>
+    <div class='div_input_info'>
         <label>Aluno:</label><input readonly="true" id='aluno_nome' type='text'>
         <label>Genero:</label><input  readonly="true" id='aluno_genero' type='text'>
     </div>
 
-    <div class='div_input'>
+    <div class='div_input_info'>
         <label>Endereço:</label><input readonly="true" id='aluno_end' type='text'>
         <label>Nº:</label><input  readonly="true" id='aluno_end_numero' type='text'>
     </div>
-    <div class='div_input'><label>Bairro:</label><input readonly="true" id='aluno_bairro' type='text'></div>
-    <div class='div_input'><label>CEP:</label><input readonly="true" id='aluno_cep' type='text'></div>
-    <div class='div_input'><label>RG:</label><input readonly="true" id='aluno_rg' type='text'></div>
-    <div class='div_input'><label>Data Nasc.:</label><input readonly="true" id='aluno_data_nasc' type='text'></div>
-    <div class='div_input'><label>Cel.:</label><input readonly="true" id='aluno_cel' type='text'></div>
-    <div class='div_input'><label>Tel.:</label><input readonly="true" id='aluno_tel' type='text'></div>
-</fieldset>
-<div id='bg_cursos'>
+    <div class='div_input_info'><label>Bairro:</label>
+        <input readonly="true" id='aluno_bairro' type='text'>
+    </div>
+    <div class='div_input_info'><label>CEP:</label><input readonly="true" id='aluno_cep' type='text'></div>
+    <div class='div_input_info'><label>RG:</label><input readonly="true" id='aluno_rg' type='text'></div>
+    <div class='div_input_info'><label>Data Nasc.:</label><input readonly="true" id='aluno_data_nasc' type='text'></div>
+    <div class='div_input_info'><label>Cel.:</label><input readonly="true" id='aluno_cel' type='text'></div>
+    <div class='div_input_info'><label>Tel.:</label><input readonly="true" id='aluno_tel' type='text'></div>
+</div><!--filedset-->
 
-</div>
 <input disabled type='submit' value='Salvar Alterações'>
 </form>
 
