--- a/src/assets/css/sass/alunos/_view_table_alunos.scss
+++ b/src/assets/css/sass/alunos/_view_table_alunos.scss
@@ -1,7 +1,7 @@
-#table_info_alunos
+#view_table_alunos
 {
     .td_controles{
-     width: 180px;
+     width: 220px;
         height:40px;
         text-align: center;
             button{
