--- a/src/components/alunos/viewTableAlunos.html
+++ b/src/components/alunos/viewTableAlunos.html
@@ -1,7 +1,7 @@
-<div  class='bg_tables bg_info_tables' id='bg_info_table_alunos'>
+<div  class='bg_tables bg_view_tables' id='bg_view_table_alunos'>
  
    
-        <table class='table_info' border='1'  id='table_info_alunos'>
+        <table class='view_table' border='1'  id='view_table_alunos'>
          <caption>Alunos</caption>
         <thead> 
             <th>RA</th>
