--- a/src/components/users/formConfigPerm.html
+++ b/src/components/users/formConfigPerm.html
@@ -1,3 +1,4 @@
+<div class='bg_form_block_screen'>
 <form id='form_config_perm' >
     <h3>
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-file-earmark-lock" viewBox="0 0 16 16">
@@ -10,7 +11,6 @@
     <textarea  spellcheck="false" id='textarea_permissions' >
   Carregando...
     </textarea>
-
     <div class='div_submit'><input type='submit' value="Salvar"/></div>
-
 </form>
+</div>
