--- a/src/components/controleAula/formAddAula.html
+++ b/src/components/controleAula/formAddAula.html
@@ -1,3 +1,4 @@
+<div class='bg_form_block_screen'>
 <form id="form_add_aula" class="forms_controle_aula">
     <span class="btn_close_form">X</span>
     <h3><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-clipboard-plus" viewBox="0 0 16 16">
@@ -99,3 +100,4 @@
     <div id='div_detalhes'><label>Detalhes:</label><textarea  required  id="detalhes"></textarea></div>
     <input type="submit" value="Salvar" />
   </form>
+</div>
