--- a/src/components/users/formAddUser.html
+++ b/src/components/users/formAddUser.html
@@ -1,3 +1,4 @@
+<div class='bg_form_block_screen'>
 <form id='form_add_user' >
     <h3>
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-plus-fill" viewBox="0 0 16 16">
@@ -43,3 +44,4 @@
     <div class='div_submit'><input type='submit' value="Salvar"/></div>
 
 </form>
+</div>
