--- a/src/components/users/formReauthUser.html
+++ b/src/components/users/formReauthUser.html
@@ -1,3 +1,4 @@
+<div class='bg_form_block_screen'>
 <form id='form_reauth_user' >
     <h3>
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-file-lock" viewBox="0 0 16 16">
@@ -6,16 +7,11 @@
           </svg>
         Por favor confirme sua senha</h3>
     <span class="btn_close_form">X</span>
-
-  
     <div>
         <label>Email: </label>
 
         <input type='email' id='user_email' value='fulano@email.com' />
     </div>
-
-
-
     <div>
         <label>Password: </label>
         <input type='password' id='user_password' value='123456'/>
@@ -24,3 +20,4 @@
     <div class='div_submit'><input type='submit' value="Confirmar"/></div>
 
 </form>
+</div>
