--- a/src/components/users/index.html
+++ b/src/components/users/index.html
@@ -1,7 +1,7 @@
   
 <div class="components" id="page_users">
     <h1>Usuários</h1>
-<div id=''>
+<div id='bg_form_add_user'>
 
   <div id='bg_submenu_page'>
     <menu id='submenu_page_user' class='submenu_page'>
