W.I.P - Correções controle aula

--- a/src/assets/css/sass/abstracts/_variables.scss
+++ b/src/assets/css/sass/abstracts/_variables.scss
@@ -39,8 +39,8 @@ $title-color-light: #f0f0f0;
 
 //Borders
 $border-color-medium: #999;
-
 $border-set-default: 1px solid $border-color-medium;
+$border-set-decorative: 1px solid #666;
 $border-radius: 3px;
 
 //Padding
