--- a/src/assets/css/sass/controle_aula/_controle_aula.scss
+++ b/src/assets/css/sass/controle_aula/_controle_aula.scss
@@ -10,8 +10,8 @@
 
 
   #form_select_aluno {
-    background: #ddd;
-    border:1px solid #444;
+    background: #ccc;
+    border-bottom:1px solid #444;
     width: 100%;
     height: auto;
     display: flex;
