--- a/src/components/fluxoCaixa/resumoFluxoCaixa.html
+++ b/src/components/fluxoCaixa/resumoFluxoCaixa.html
@@ -11,7 +11,7 @@
      
     </menu>
    
-    <div id='resumo_content'>
+    <div class='bg_tables' id='resumo_content'>
         <table id='table_resumo_fluxo_caixa'>
             <thead>
                 <th>Mês</th>
