--- a/src/components/fluxoCaixa/saidasInfoTable.html
+++ b/src/components/fluxoCaixa/saidasInfoTable.html
@@ -1,4 +1,4 @@
-<div  class=' bg_tables bg_info_tables' id='bg_saidas_info_table'>
+<div  id='bg_saidas_info_table'>
     <menu class='filtro_table' id='filtro_table_saida'>
         <div>
             <select id='select_ano'>
@@ -24,7 +24,7 @@
         </select>
         </div>
     </menu>
-    <div id='bg_table'>
+    <div  class=' bg_tables bg_info_tables' >
 <table class='table_info' border='1'  id='saida_avulsa_table_info'>
     <caption>Saidas de Caixa</caption>
     <thead> 
