--- a/src/components/fluxoCaixa/entradasInfoTable.html
+++ b/src/components/fluxoCaixa/entradasInfoTable.html
@@ -1,66 +1,67 @@
-<div class='bg_info_tables' id='bg_entradas_info_table'>
+<div  id='bg_entradas_info_table'>
     <menu class='filtro_table' id='filtro_table_pag_mensal'>
         <div>
             <select id='select_ano'>
-            <option value='2019'>2019</option>
-            <option value='2020'>2020</option>
-            <option selected value='2021'>2021</option>
-        </select>
+                <option value='2019'>2019</option>
+                <option value='2020'>2020</option>
+                <option selected="selected" value='2021'>2021</option>
+            </select>
         </div>
         <div>
-        <select id='select_mes'>
-            <option value='janeiro'>Janeiro</option>
-            <option value='fevereiro'>Fevereiro</option>
-            <option value='março'>Março</option>
-            <option value='abril'>Abril</option>
-            <option value='maio'>Maio</option>
-            <option value='junho'>Junho</option>
-            <option value='julho'>Julho</option>
-            <option value='agosto'>Agosto</option>
-            <option value='setembro'>Setembro</option>
-            <option value='outubro'>Outubro</option>
-            <option value='novembro'>Novembro</option>
-            <option value='dezembro'>Dezembro</option>
-        </select>
+            <select id='select_mes'>
+                <option value='janeiro'>Janeiro</option>
+                <option value='fevereiro'>Fevereiro</option>
+                <option value='março'>Março</option>
+                <option value='abril'>Abril</option>
+                <option value='maio'>Maio</option>
+                <option value='junho'>Junho</option>
+                <option value='julho'>Julho</option>
+                <option value='agosto'>Agosto</option>
+                <option value='setembro'>Setembro</option>
+                <option value='outubro'>Outubro</option>
+                <option value='novembro'>Novembro</option>
+                <option value='dezembro'>Dezembro</option>
+            </select>
         </div>
     </menu>
-    <div class='bg_info_tables' id='bg_tables'>
+    <div class='bg_tables bg_info_tables' >
 
-<table class='table_info' border='1'  id='pag_mensal_table_info'>
-    <caption>Pagamentos de Mensalidade</caption>
-<thead> 
-    <th>Data</th>
-    <th>Aluno</th>
-    <th>Curso</th>
-    <th>Parcela</th>
-    <th>Form. Pag</th>
-    <th>Valor</th>
-    </thead>
-    <tbody id='tbody'>
-        <td>...</td>
-        <td>...</td>
-        <td>...</td>
-        <td>...</td>
-        <td >...</td>
-        <td class='td_valor_total'>R$ 0, 00</td>
-    </tbody>
-</table>
-<table class='table_info' border='1'  id='entrada_avulsa_table_info'>
-    <caption>Entradas Avulso</caption>
+        <table class='table_info' border='1' id='pag_mensal_table_info'>
+            <caption>Pagamentos de Mensalidade</caption>
+            <thead>
+                <th>Data</th>
+                <th>Aluno</th>
+                <th>Curso</th>
+                <th>Parcela</th>
+                <th>Form. Pag</th>
+                <th>Valor</th>
+            </thead>
+            <tbody id='tbody'>
+                <td>...</td>
+                <td>...</td>
+                <td>...</td>
+                <td>...</td>
+                <td>...</td>
+                <td class='td_valor_total'>R$ 0, 00</td>
+            </tbody>
+        </table>
+        <table class='table_info' border='1' id='entrada_avulsa_table_info'>
+            <caption>Entradas Avulso</caption>
 
-    <thead> 
-        <th>Data</th>
-        <th>Descrição</th>
-        <th>Form. Pag</th>
-        <th>Valor</th>
-        </thead>
-        <tbody id='tbody'>
-            <td>...</td>
-            <td>...</td>
-            <td>...</td>
-            <td>R$ 0, 00</td>
-        </tbody>
-    </table>
-</div><!--bg_tables-->
+            <thead>
+                <th>Data</th>
+                <th>Descrição</th>
+                <th>Form. Pag</th>
+                <th>Valor</th>
+            </thead>
+            <tbody id='tbody'>
+                <td>...</td>
+                <td>...</td>
+                <td>...</td>
+                <td>R$ 0, 00</td>
+            </tbody>
+        </table>
+    </div>
+    <!--bg_tables-->
 
 </div>
